syntax = "proto3";

package todo;

message Todo {
  string taskName = 1;
  bool completed = 2;
}

message GetTodosRequest{}
message GetTodosResponse{
  repeated Todo todos = 1;
}

service TodoTransaction{
  rpc GetTodos(GetTodosRequest) returns (GetTodosResponse){}
}